# vision-desktop-automation

./: README.md  TODO.md  main.py  pyproject.toml  requirements.txt
automation/: api.py  desktop.py  grounding.py  notepad.py
